@@ -247,7 +247,9 @@ class Request(RequestBase):
                                            app.cfg['secret_key'])
         user_id = session.get('uid')
         if user_id:
-            user = User.query.get(user_id)
+            user = User.query.options(db.eagerload('groups'),
+                                      db.eagerload('groups', '_privileges')) \
+                             .get(user_id)
         if user is None:
             user = User.query.get_nobody()
         self.user = user
